--- a/untitled.ui
+++ b/untitled.ui
@@ -233,6 +233,19 @@
            </widget>
           </item>
           <item>
+           <widget class="QLineEdit" name="line_edit_password_withdraw">
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="placeholderText">
+             <string>Mật khẩu rút</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="label_2">
             <property name="text">
              <string>Số luồng:</string>
@@ -240,7 +253,14 @@
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="spinBox"/>
+           <widget class="QSpinBox" name="spin_box_total_thread">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>10</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
